# Python-packages

./: Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  install-packages.sh  jupyterlab.sh  notebook.sh  numpy-patch.sh  python-packages-install.sh  python-packages-update.sh  requirements-2.7.txt
